axum-macros/tests/debug_handler/fail/wrong_return_type.stderr
error[E0277]: the trait bound `bool: IntoResponseParts` is not satisfied
 --> tests/debug_handler/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ the trait `IntoResponseParts` is not implemented for `bool`
  |
  = note: required because of the requirements on the impl of `IntoResponse` for `bool`
note: required by a bound in `__axum_macros_check_handler_into_response::{closure#0}::check`
 --> tests/debug_handler/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ required by this bound in `__axum_macros_check_handler_into_response::{closure#0}::check`
